# infino

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DUMMY.md  Makefile  README.md  SECURITY.md  build.rs  context7.json  crate-docs.md  llms.txt  public-api.txt
.cargo/: config.toml
.devin/: wiki.json
.github/scripts/: bench_summary.py
.github/workflows/: bench-janitor.yml  bench.yml  ci.yml  crate-publish.yml  dataset-bench-azure.yml  dataset-bench-vm.yml  dataset-bench.yml  dataset-prepare.yml  locomo-recall.yml  node-examples.yml  node-publish-gemfury.yml  node-publish.yml  pr-review.yml  publish-python.yml  supertable-bench-azure.yml
benches/: README.md
benches/bench/: main.rs
benches/fts/: main.rs  main_superfile.rs  main_supertable.rs  superfile.rs  supertable.rs
benches/object_store/: main.rs
benches/scale/: main.rs  vector_recall.rs
benches/sql/: main.rs
benches/supertable/: main.rs
benches/supertable_update/: main.rs
benches/tombstone_overhead/: main.rs
benches/utils/: Cargo.toml  concurrent.rs  corpus.rs  cost.rs  dataset.rs  executors.rs  fts_superfile.rs  fts_supertable.rs  markdown.rs  mod.rs  report.rs  rss.rs  rustfs_server.rs  scale.rs  sql_bench.rs  sql_diag.rs  storage_meter.rs  superfile.rs  supertable.rs  supertable_bench.rs  supertable_update.rs  tiers.rs  tombstone_overhead.rs  unified_object_store.rs  vector_object_store.rs  vector_superfile.rs  vector_supertable.rs
benches/utils/bench/: mod.rs
benches/utils/bench/supertable/: fts_search.rs  ingest.rs  mod.rs  query.rs  vector_search.rs
benches/utils/corpus/: combined.rs  grading.rs
benches/utils/fixture/: mod.rs  supertable.rs
benches/utils/harness/: driver.rs  infino_engine.rs  infino_sql_engine.rs  infino_vector_engine.rs  mod.rs  sql_driver.rs  vector_driver.rs
benches/utils/ingest/: supertable.rs
benches/vector/: main.rs  object_store.rs  superfile.rs  supertable.rs
cla/: ICLA.md
docs/: faq.md  versioning.md
docs/architecture/: opann.md  overview.md  superfile.md  supertable.md
examples/: demo.rs  profile_fts_build.rs  quickstart.rs
examples/locomo-recall/: README.md  embed.mjs  main.rs
infino-node/: .gitignore  Cargo.toml  README.md  infino.d.ts  infino.js  package-lock.json  package.json
infino-node/__test__/: azure.e2e.test.mjs  smoke.test.mjs
infino-node/examples/: demo.mjs
infino-node/infino/: index.ts
infino-node/infx/: native.d.ts  native.js
infino-node/scripts/: verify-pack.sh
infino-node/src/: lib.rs
infino-python/: Cargo.toml  README.md  build.rs  pyproject.toml
infino-python/examples/: .gitignore  01_rag_pdf.ipynb  02_hybrid_rag.ipynb  03_filtered_rag.ipynb  04_chat_rag.ipynb  README.md  parquet_interop.py  requirements.txt
infino-python/examples/_shared/: __init__.py  chunking.py  datasets.py  embedding.py  llm.py  loaders.py  sql.py
infino-python/examples/analytics/: 01_hackernews_sql_search.ipynb  README.md
infino-python/examples/chat_app/: README.md  app.py  rag.py
infino-python/examples/code_search/: 01_code_search.ipynb  README.md
infino-python/examples/langchain/: 01_live_data_rag.ipynb  02_research_assistant.ipynb  03_support_ops_agent.ipynb  requirements.txt
infino-python/examples/mutations/: 01_mutable_catalog.ipynb  README.md
infino-python/examples/rag/: 01_rag_pdf.ipynb  03_filtered_rag.ipynb  04_chat_rag.ipynb
infino-python/python/infino/: __init__.py  _infino.pyi
infino-python/src/: lib.rs
infino-python/tests/: test_azure_e2e.py  test_parquet_interop.py  test_smoke.py
infino-python/tests/typing/: quickstart.py
src/: error.rs  get_meter.rs  lib.rs  runtime_bridge.rs
tests/: license_audit.rs  spdx_headers.rs  supertable_commit_crash_localfs.rs  supertable_concurrent_processes.rs
(+195 files in other folders)
