[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "infino"
description = "Fast search on object storage — SQL, full-text, and vector search."
# Long description rendered on the PyPI project page (markdown).
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["pyarrow>=14"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pyarrow>=14"]

[tool.mypy]
strict = true

# pyarrow ships no type information; treat it as untyped rather than
# failing the strict run on a third-party gap.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.maturin]
# Mixed layout: the compiled cdylib is the private `infino._infino`
# extension; the hand-written `python/infino/` package re-exports it and
# ships the typing artifacts (`py.typed`, stubs) and module metadata.
python-source = "python"
module-name = "infino._infino"
features = ["pyo3/extension-module"]
# Keep compiled bytecode out of the wheel (a local `develop` leaves it in
# the source tree).
exclude = ["**/__pycache__/**"]
