[package]
name = "infino-bench-utils"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "mod.rs"

[dependencies]
arrow-array = "58"
arrow-schema = "58"
bytes = "1"
bytemuck = "1"
infino = { path = "../..", features = ["test-helpers"] }
memmap2 = "0.9"
rand = "0.10"
rand_distr = "0.6"
serde_json = "1"
tempfile = "3"
